--- a/face_detection.ipynb
+++ b/face_detection.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images = tf.data.Dataset.list_files('aug_data\\\\train\\\\images\\\\*.jpg', shuffle=False)\n",
+    "train_images = tf.data.Dataset.list_files('aug_data/train/images/*.jpg', shuffle=False)\n",
     "train_images = train_images.map(load_image)\n",
     "train_images = train_images.map(lambda x: tf.image.resize(x, (120,120)))\n",
     "train_images = train_images.map(lambda x: x/255)"
@@ -452,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_images = tf.data.Dataset.list_files('aug_data\\\\test\\\\images\\\\*.jpg', shuffle=False)\n",
+    "test_images = tf.data.Dataset.list_files('aug_data/test/images/*.jpg', shuffle=False)\n",
     "test_images = test_images.map(load_image)\n",
     "test_images = test_images.map(lambda x: tf.image.resize(x, (120,120)))\n",
     "test_images = test_images.map(lambda x: x/255)"
@@ -489,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels = tf.data.Dataset.list_files('aug_data\\\\train\\\\labels\\\\*.json', shuffle=False)\n",
+    "train_labels = tf.data.Dataset.list_files('aug_data/train/labels/*.json', shuffle=False)\n",
     "train_labels = train_labels.map(lambda x: tf.py_function(load_labels, [x], [tf.uint8, tf.float16]))"
    ]
   },
@@ -500,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_labels = tf.data.Dataset.list_files('aug_data\\\\test\\\\labels\\\\*.json', shuffle=False)\n",
+    "test_labels = tf.data.Dataset.list_files('aug_data/test/labels/*.json', shuffle=False)\n",
     "test_labels = test_labels.map(lambda x: tf.py_function(load_labels, [x], [tf.uint8, tf.float16]))"
    ]
   },
@@ -511,7 +511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_labels = tf.data.Dataset.list_files('aug_data\\\\val\\\\labels\\\\*.json', shuffle=False)\n",
+    "val_labels = tf.data.Dataset.list_files('aug_data/val/labels/*.json', shuffle=False)\n",
     "val_labels = val_labels.map(lambda x: tf.py_function(load_labels, [x], [tf.uint8, tf.float16]))"
    ]
   },
